Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ivolve-ingress
  namespace: ivolve
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Ensure this matches your ingress controller's class
  rules:
    - host: ivolve-project.myddns.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ivolve-service
                port:
                  number: 8081  # Change this to match your NodePort Service
